5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1679_1104.log
== TEST (2019-04-27 21:23:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		print('escaleno')
-- ERROR:
File "XXXX", line 10
    print("Nao eh triangulo")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:24:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:24:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:24:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:24:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:26:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
else:
		print('escaleno')
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:26:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:26:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:27:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:27:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:28:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:28:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:28:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:29:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:29:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:29:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:29:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("Nao eh triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	if ((x == y) or (y == z) or (z == x)):
		print("isosceles")
	else:
		print('escaleno')
-- OUTPUT:
Nao eh triangulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:30:57) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x < y + z) and (y < x + z) and (z < y + x)):
	if ((x != y) and (y != z) and (z != x)):
		print("escaleno")
	else:
		if ((x != y) or (y != z)):
			print("isosceles")
		else:
			print("equilatero")
else:
print("Nao eh triangulo")

-- ERROR:
File "XXXX", line 14
    print("Nao eh triangulo")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:31:17) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x < y + z) and (y < x + z) and (z < y + x)):
	if ((x != y) and (y != z) and (z != x)):
		print("escaleno")
	else:
		if ((x != y) or (y != z)):
			print("isosceles")
else:
	print("equilatero")
else:
print("Nao eh triangulo")

-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:32:03) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

if ((x < y + z) and (y < x + z) and (z < y + x)):
	if x != y and y != z and z != x:
		print("escaleno")
	else:
		if ((x != y) or (y != z)):
			print("isosceles")
else:
	print("equilatero")
else:
print("Nao eh triangulo")

-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:31:23) 
-- CODE:
print("Nao eh triangulo")

-- EXECUTION TIME:
0.134998
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Nao eh triangulo
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Nao eh triangulo
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Nao eh triangulo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:57:53) 
-- CODE:
a=float(input(" "))
b=float(input(" "))
c=float(input(" "))
d=float(input(" "))
print("Intervalo 1:", a, ",", b, )
print("Intervalo 2:", c, ",", d, )
if (b>a and d>c):
	if((c>a and c<b) or (d>a and d<b)):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")

-- EXECUTION TIME:
0.165894
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
